// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Disabled FormSelect input  1`] = `
.pf-c-form-control {
  display: block;
  color: #282d33;
  position: relative;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  background-color: #ffffff;
  border: 1px solid;
  border-color: #ededed #ededed #72767b #ededed;
  border-radius: 0;
}

<select
  aria-invalid={false}
  aria-label="disabled  FormSelect"
  className="pf-c-form-control"
  disabled={true}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  value=""
>
  <FormSelectOption
    className=""
    isDisabled={false}
    key="1"
    label="Mr"
    value="mr"
  />
</select>
`;

exports[`FormSelect input with aria-label does not generate console error 1`] = `
.pf-c-form-control {
  display: block;
  color: #282d33;
  position: relative;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  background-color: #ffffff;
  border: 1px solid;
  border-color: #ededed #ededed #72767b #ededed;
  border-radius: 0;
}

<select
  aria-invalid={false}
  aria-label="FormSelect with aria-label"
  className="pf-c-form-control"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  value=""
>
  <FormSelectOption
    className=""
    isDisabled={false}
    key="1"
    label="Mr"
    value="mr"
  />
</select>
`;

exports[`FormSelect input with id does not generate console error 1`] = `
.pf-c-form-control {
  display: block;
  color: #282d33;
  position: relative;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  background-color: #ffffff;
  border: 1px solid;
  border-color: #ededed #ededed #72767b #ededed;
  border-radius: 0;
}

<select
  aria-invalid={false}
  aria-label={null}
  className="pf-c-form-control"
  disabled={false}
  id="id"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  value=""
>
  <FormSelectOption
    className=""
    isDisabled={false}
    key="1"
    label="Mr"
    value="mr"
  />
</select>
`;

exports[`FormSelect input with no aria-label or id generates console error 1`] = `
.pf-c-form-control {
  display: block;
  color: #282d33;
  position: relative;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  background-color: #ffffff;
  border: 1px solid;
  border-color: #ededed #ededed #72767b #ededed;
  border-radius: 0;
}

<select
  aria-invalid={false}
  aria-label={null}
  className="pf-c-form-control"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  value=""
>
  <FormSelectOption
    className=""
    isDisabled={false}
    key="1"
    label="Mr"
    value="mr"
  />
</select>
`;

exports[`Grouped FormSelect input 1`] = `
.pf-c-form-control {
  display: block;
  color: #282d33;
  position: relative;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  background-color: #ffffff;
  border: 1px solid;
  border-color: #ededed #ededed #72767b #ededed;
  border-radius: 0;
}

<select
  aria-invalid={false}
  aria-label=" grouped FormSelect"
  className="pf-c-form-control"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  value="2"
>
  <FormSelectOptionGroup
    className=""
    isDisabled={false}
    key="0"
    label="Group1"
  >
    <FormSelectOption
      className=""
      isDisabled={false}
      key="0"
      label="The First Option"
      value="1"
    />
    <FormSelectOption
      className=""
      isDisabled={false}
      key="1"
      label="Second option is selected by default"
      value="2"
    />
  </FormSelectOptionGroup>
  <FormSelectOptionGroup
    className=""
    isDisabled={false}
    key="1"
    label="Group2"
  >
    <FormSelectOption
      className=""
      isDisabled={false}
      key="0"
      label="The Third Option"
      value="3"
    />
    <FormSelectOption
      className=""
      isDisabled={false}
      key="1"
      label="The Fourth option"
      value="4"
    />
  </FormSelectOptionGroup>
  <FormSelectOptionGroup
    className=""
    isDisabled={true}
    key="2"
    label="Group3"
  >
    <FormSelectOption
      className=""
      isDisabled={false}
      key="0"
      label="The Fifth Option"
      value="5"
    />
    <FormSelectOption
      className=""
      isDisabled={false}
      key="1"
      label="The Sixth option"
      value="6"
    />
  </FormSelectOptionGroup>
</select>
`;

exports[`Simple FormSelect input 1`] = `
.pf-c-form-control {
  display: block;
  color: #282d33;
  position: relative;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  background-color: #ffffff;
  border: 1px solid;
  border-color: #ededed #ededed #72767b #ededed;
  border-radius: 0;
}

<select
  aria-invalid={false}
  aria-label="simple FormSelect"
  className="pf-c-form-control"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  value="mrs"
>
  <FormSelectOption
    className=""
    isDisabled={true}
    key="0"
    label="Please Choose"
    value="please choose"
  />
  <FormSelectOption
    className=""
    isDisabled={false}
    key="1"
    label="Mr"
    value="mr"
  />
  <FormSelectOption
    className=""
    isDisabled={false}
    key="2"
    label="Miss"
    value="miss"
  />
  <FormSelectOption
    className=""
    isDisabled={false}
    key="3"
    label="Mrs"
    value="mrs"
  />
  <FormSelectOption
    className=""
    isDisabled={false}
    key="4"
    label="Ms"
    value="ms"
  />
  <FormSelectOption
    className=""
    isDisabled={false}
    key="5"
    label="Dr"
    value="dr"
  />
  <FormSelectOption
    className=""
    isDisabled={true}
    key="6"
    label="Other"
    value="other"
  />
</select>
`;

exports[`invalid FormSelect input 1`] = `
.pf-c-form-control {
  display: block;
  color: #282d33;
  position: relative;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  background-color: #ffffff;
  border: 1px solid;
  border-color: #ededed #ededed #72767b #ededed;
  border-radius: 0;
}

<select
  aria-invalid={true}
  aria-label="invalid FormSelect"
  className="pf-c-form-control"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  value=""
>
  <FormSelectOption
    className=""
    isDisabled={false}
    key="1"
    label="Mr"
    value="mr"
  />
</select>
`;

exports[`required FormSelect input 1`] = `
.pf-c-form-control {
  display: block;
  color: #282d33;
  position: relative;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5;
  background-color: #ffffff;
  border: 1px solid;
  border-color: #ededed #ededed #72767b #ededed;
  border-radius: 0;
}

<select
  aria-invalid={false}
  aria-label="required FormSelect"
  className="pf-c-form-control"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  required={true}
  value=""
>
  <FormSelectOption
    className=""
    isDisabled={false}
    key="1"
    label="Mr"
    value="mr"
  />
</select>
`;
